--- a/typed-wire.cabal
+++ b/typed-wire.cabal
@@ -38,6 +38,7 @@ library
                 containers >=0.5,
                 directory >=1.2,
                 filepath >=1.4,
+                Glob >= 0.9.0,
                 http-types >=0.8.6
   default-language:    Haskell2010
 
